--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This project contains the code for Chrome Nanny.
+Chrome Nanny is a distraction blocking extension for Google Chrome. It was originally authored by Saravanan Thirumuruganathan. I have updated it to run properly on all version of Chrome and have also been adding a few new features.
